--- a/website/templates/portfolio.html
+++ b/website/templates/portfolio.html
@@ -1,2 +1,45 @@
 <!-- your html code here -->
-<p>Hello, I'm the portfolio.html</p>
+
+<div class="container mt-5">
+    <div class="bg-light p-3 rounded mb-4">
+        <h1 class="mb-0">Project Overview</h1>
+    </div>
+    <div class="card-group">
+        <div class="card">
+            <img src="..." class="card-img-top" alt="...">
+            <div class="card-body">
+                <h5 class="card-title">Project Name</h5>
+                <p class="card-text">Far Out in the uncharted backwaters of the unfashionable end of the Western Spiral arm of the galaxy lies a small unregarded yellow sun.</p>
+            </div>
+            <!-- Code to be removed    
+            <div class="card-footer">
+                <small class="text-muted">Last updated 3 mins ago</small>
+            </div>
+        -->
+        </div>
+        <div class="card">
+            <img src="..." class="card-img-top" alt="...">
+            <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+            </div>
+            <!-- Code to be removed    
+            <div class="card-footer">
+                <small class="text-muted">Last updated 3 mins ago</small>
+            </div>
+        -->
+        </div>
+        <div class="card">
+            <img src="..." class="card-img-top" alt="...">
+            <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+            </div>
+<!-- Code to be removed             
+            <div class="card-footer">
+                <small class="text-muted">Last updated 3 mins ago</small>
+            </div>  
+            -->
+        </div>
+    </div>
+</div>
