--- a/website/templates/portfolio.html
+++ b/website/templates/portfolio.html
@@ -6,7 +6,7 @@
     </div>
     <div class="card-group">
         <div class="card">
-            <img src="..." class="card-img-top" alt="...">
+            <img src="../assets/img/big-project-image.png" class="card-img-top" alt="...">
             <div class="card-body">
                 <h5 class="card-title">Project Name</h5>
                 <p class="card-text">Far Out in the uncharted backwaters of the unfashionable end of the Western Spiral arm of the galaxy lies a small unregarded yellow sun.</p>
