--- a/website/templates/portfolio.html
+++ b/website/templates/portfolio.html
@@ -6,7 +6,7 @@
     </div>
     <div class="card-group">
         <div class="card">
-            <img src="../assets/img/big-project-image.png" class="card-img-top" alt="...">
+            <img src="../assets/img/big-project-image.png" class="card-img-top" alt="Image goes here!">
             <div class="card-body">
                 <h5 class="card-title">Project Name</h5>
                 <p class="card-text">Far Out in the uncharted backwaters of the unfashionable end of the Western Spiral arm of the galaxy lies a small unregarded yellow sun.</p>
@@ -20,8 +20,8 @@
         <div class="card">
             <img src="..." class="card-img-top" alt="...">
             <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+                <h5 class="card-title">Project Name</h5>
+                <p class="card-text">Far Out in the uncharted backwaters of the unfashionable end of the Western Spiral arm of the galaxy lies a small unregarded yellow sun.</p>
             </div>
             <!-- Code to be removed    
             <div class="card-footer">
@@ -30,10 +30,10 @@
         -->
         </div>
         <div class="card">
-            <img src="..." class="card-img-top" alt="...">
+            <img src="https://raw.githubusercontent.com/4GeeksAcademy/bcpt4-exercise-collaborative-html-website/refs/heads/master/website/assets/img/big-project-image.png" class="card-img-top" alt="...">
             <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+                <h5 class="card-title">Project Name</h5>
+                <p class="card-text">Far Out in the uncharted backwaters of the unfashionable end of the Western Spiral arm of the galaxy lies a small unregarded yellow sun.</p>
             </div>
 <!-- Code to be removed             
             <div class="card-footer">
