--- a/website/templates/tagline.html
+++ b/website/templates/tagline.html
@@ -3,5 +3,5 @@
 <!-- <p>Hello, I'm the tagline and I was loaded using ajax from templates/tagline.html</p> --> -->
 
 <div>
-    <img src="/../../assets/img/bg.jpg" class="bg-img">
+    <img src="/website/assets/img/bg.jpg" class="bg-img">
 </div>
