--- a/website/templates/contact.html
+++ b/website/templates/contact.html
@@ -1,2 +1,20 @@
 <!-- your html code here -->
-<p>Hello, I'm contact.html</p>
+<div class="contact.html">
+    <div class="heading fs-2 fw-bold" style="text-start">
+        <h1>Contact</h1>
+    </div>
+    <div class="contact-info">
+        <p>Until the ullamcorper there is no fear of the author fringilla. This is always the gateway to success. It is a great opportunity to pursue a career or a career. A good deal of protein, terrain and running.
+    </div>
+    <div class="row-1">
+        <div class="col"> 
+             <label for="exampleFormControlInput1" class="form-label">Email address</label>
+             <input class="form-control form-control-lg" type="text" placeholder=".form-control-lg" aria-label=".form-control-lg example">
+        </div>
+        <div class="col">
+             <label for="exampleFormControlTextarea1" class="col-form-label">Your message</label>
+             <textarea class="col-form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+        </div>
+        
+    </div>
+</div>
