--- a/website/templates/portfolio.html
+++ b/website/templates/portfolio.html
@@ -35,6 +35,7 @@
                 <h5 class="card-title">Card title</h5>
                 <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
             </div>
+            <h1> daniel was here</h1>
 <!-- Code to be removed             
             <div class="card-footer">
                 <small class="text-muted">Last updated 3 mins ago</small>
