--- a/website/templates/first_heading.html
+++ b/website/templates/first_heading.html
@@ -1,2 +1,9 @@
 <!-- your html code here -->
-<p>Hello, I'm the first_heading.html</p>
+<div class="row">
+    <div class="col ">
+      <p>Hello, my name is Test, and I'm happy to present you my project !</p>
+    </div>
+    <div class="col">
+      <img image1 src="https://material.angular.io/assets/img/examples/shiba1.jpg" class="rounded-circle shadow-4strong" alt=""/>
+    </div>
+  </div>
