--- a/website/templates/contact.html
+++ b/website/templates/contact.html
@@ -1,32 +1,39 @@
 <!-- your html code here -->
-<div class="container">
-    <div class="Header fs-2 fw-bold" style="text-start">
-        <h1>Contact</h1>
+<div class="container mt-5">
+    <div class="bg-light p-3 rounded mb-4">
+        <h1 >Contact</h1>
     </div>
-    <div class="contact-info">
+    <div class="contact-info ">
         <p>Until the ullamcorper there is no fear of the author fringilla. This is always the gateway to success. It is a great opportunity to pursue a career or a career. A good deal of protein, terrain and running.
     </div>
     <!--forms-->
 
+  <div class="container mt-5 bg-light p-3 rounded mb-4">
     <form class="form-horizontal">
+
+      <div class="row g-1">
         <div class="form-group">
-          <label class="control-label col-sm-2" for="email">Your E-mail</label>
-          <div class="col-sm-10">
-            <input type="email" class="form-control" id="email" placeholder="Enter email">
-          </div>
+              <label class="form-label-inline col-sm-2" for="emailFormControlInput1">Your E-mail</label> 
+              <div class="col-sm-10">
+              <input type="email" class="form-control" id="emailFormControlInput1" placeholder="Enter email">
         </div>
+      </div>
+         
+      <div class="row g-1"
         <div class="form-group">
-          <label class="control-label col-sm-2" for="pwd">Your message</label>
-          <div class="col-sm-10">          
-            <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" placeholder="Please enter your message here..."></textarea>
-          </div>
+              <label class="form-label-inline col-sm-2" for="exampleFormControlTextarea1">Your message</label>
+              <div class="col-sm-10">          
+              <textarea class="form-control" id="exampleFormControlTextarea1" rows="5" placeholder="Please enter your message here..."></textarea>
         </div>
-        <div class="d-grid gap-2 d-md-flex justify-content-md-end">
+      </div>
+
+      <div class="d-grid gap-2 d-md-flex justify-content-md-end">
             <button class="btn btn-primary" type="button">Button</button>
-          </div>
-        
-       
+      </div>
     </form>
+  </div>
+
+    
     
 </div>
   
