--- a/website/templates/contact.html
+++ b/website/templates/contact.html
@@ -11,19 +11,20 @@
   <div class="container mt-5 bg-light p-3 rounded mb-4">
     <form class="form-horizontal">
 
+<!-- something happened here (email label class)-->
       <div class="row g-1">
-        <div class="form-group">
-              <label class="form-label-inline col-sm-2" for="emailFormControlInput1">Your E-mail</label> 
+        <div class="form-group>  
+              <label class="form-label col-sm-2" for="examplelFormControlInput1">Your E-mail</label> 
               <div class="col-sm-10">
-              <input type="email" class="form-control" id="emailFormControlInput1" placeholder="Enter email">
+              <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Enter email">
         </div>
       </div>
          
       <div class="row g-1"
         <div class="form-group">
-              <label class="form-label-inline col-sm-2" for="exampleFormControlTextarea1">Your message</label>
+              <label class="form-label col-sm-2" for="exampleFormControlTextarea1">Your message</label>
               <div class="col-sm-10">          
-              <textarea class="form-control" id="exampleFormControlTextarea1" rows="5" placeholder="Please enter your message here..."></textarea>
+              <textarea class="form-control" id="exampleFormControlTextarea1" rows="5" placeholder="Please enter your message here..."></textarea>    
         </div>
       </div>
 
