--- a/website/templates/navbar.html
+++ b/website/templates/navbar.html
@@ -12,6 +12,7 @@
                 </li>
                 <li class="nav-item">
                     <a class="nav-link text-white bg-dark" href="#">Services</a>
+                    <div>Derek was also here</div>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link text-white bg-dark" href="#">Portfolio</a>
