Garys change in footer

--- a/website/templates/footer.html
+++ b/website/templates/footer.html
@@ -4,4 +4,6 @@
             <p>Copyright &copy; Your Website Name 2021</p>
         </div>
     </div>
+
+    <div><Span>Gary Was Here</Span></div>
 </footer>
