--- a/website/templates/tagline.html
+++ b/website/templates/tagline.html
@@ -1,6 +1,6 @@
 <!-- your html code here
 <!-- Also called a hero image or a jumbotron before bootstrap 5. This might be helpful: https://getbootstrap.com/docs/5.1/examples/jumbotron/ -->
-<!-- <p>Hello, I'm the tagline and I was loaded using ajax from templates/tagline.html</p> --> -->
+<!-- <p>Hello, I'm the tagline and I was loaded using ajax from templates/tagline.html</p> --> 
 
 <div>
     <img src="/website/assets/img/bg.jpg" class="bg-image" style="width:100rem; height:20rem;">
