--- a/website/templates/contact.html
+++ b/website/templates/contact.html
@@ -1,6 +1,6 @@
 <!-- your html code here -->
-<div class="container mt-5">
-    <div class="bg-light p-3 rounded mb-4">
+<div class="container mt-5 bg-light">
+    <div class=" p-3 rounded mb-4">
         <h1 >Contact</h1>
     </div>
     <div class="contact-info ">
@@ -8,23 +8,24 @@
     </div>
     <!--forms-->
 
-  <div class="container mt-5 bg-light p-3 rounded mb-4">
-    <form class="form-horizontal">
+  
+    <form class="form-horizontal col-9 mx-auto">
 
-<!-- something happened here (email label class)-->
-      <div class="row g-1">
-        <div class="form-group>  
-              <label class="form-label col-sm-2" for="examplelFormControlInput1">Your E-mail</label> 
-              <div class="col-sm-10">
+      <div class="row my-3">
+        <div class="form-group d-flex">  
+              <label class="form-label col-2" for="examplelFormControlInput1">Your E-mail</label> 
+              <div class="col-10">
               <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Enter email">
+              </div>
         </div>
       </div>
          
-      <div class="row g-1"
-        <div class="form-group">
-              <label class="form-label col-sm-2" for="exampleFormControlTextarea1">Your message</label>
-              <div class="col-sm-10">          
+      <div class="row my-3">
+        <div class="form-group d-flex">
+              <label class="form-label col-2" for="exampleFormControlTextarea1">Your message</label>
+              <div class="col-10">       
               <textarea class="form-control" id="exampleFormControlTextarea1" rows="5" placeholder="Please enter your message here..."></textarea>    
+              </div>
         </div>
       </div>
 
@@ -32,7 +33,7 @@
             <button class="btn btn-primary" type="button">Button</button>
       </div>
     </form>
-  </div>
+  
 
     
     
