--- a/website/templates/first_heading.html
+++ b/website/templates/first_heading.html
@@ -8,7 +8,7 @@
       <p>Donec ullamcorper nulla non metus auctor fringilla. 
         Vestibulum id ligula porta felis euismond semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
     </div>
-    <div class="col-4 d-flex align-items-center">
-      <img style="max-width: 60%;" src="https://material.angular.io/assets/img/examples/shiba1.jpg" class="rounded-circle shadow-4strong " alt=""/>
+    <div class="col-4 d-flex align-items-center" >
+      <img style="max-width: 60%;" src="/website/assets/img/1.jpg" class="rounded-circle shadow-4strong " alt=""/>
     </div>
   </div> 
