--- a/website/templates/navbar.html
+++ b/website/templates/navbar.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar bg-dark text-white">
     <div class="container-fluid">
-        <a class="navbar-brand text-white-50 bg-dark" href="#">Start Boostrap</a>
+        <a class="navbar-brand text-white-50 bg-dark" href="#">Start Bootstrap</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation >
             <span class=" navbar-toggler-icon"></span>
