--- a/website/templates/services.html
+++ b/website/templates/services.html
@@ -2,10 +2,10 @@
 <div class="container my-5">
     <div class="row align-items-center">
         <div class="col-md-4">
-            <img src="add-image" class="img-fluid rounded-circle" alt="Hands typing on a keyboard">
+            <img style= "max-height: 60%" src="https://fastly.picsum.photos/id/1/5000/3333.jpg?hmac=Asv2DU3rA_5D1xSe22xZK47WEAN0wjWeFOhzd13ujW4" class="img-fluid rounded-circle" alt="Hands typing on a keyboard">
         </div>
         <div class="col-md-8">
-            <h2><strong>The Second Heading</strong> Is Pretty Cool Too.</h2>
+            <h2><strong>The Second Heading</strong> <span style="color: grey;">Is Pretty Cool Too.</span></h2>
             <p>
                 Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper.
                 Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.
@@ -13,5 +13,3 @@
         </div>
     </div>
 </div>
-<p>Hello, I'm the services.html</p>
-<p>Hello, I'm the services section and I was loaded using ajax from templates/services.html</p>
