--- a/website/assets/css/style.css
+++ b/website/assets/css/style.css
@@ -7,3 +7,10 @@ body{
     border:solid black;
     margin:20px;
   }
+  .tagline{
+    background-image: url("/website/assets/img/bg.jpg");
+    height:80vh;
+    background-size: cover;
+    background-repeat:no-repeat;
+    padding-top:-300px;
+}
