--- a/website/templates/tagline.html
+++ b/website/templates/tagline.html
@@ -3,6 +3,6 @@
 <!-- <p>Hello, I'm the tagline and I was loaded using ajax from templates/tagline.html</p> --> 
 
 <div>
-    <img src="/website/assets/img/bg.jpg" class="bg-image" style="width:100rem; height:20rem;">
+    <img src="/website/assets/img/bg.jpg" class="bg-image" style="width:100; height:20rem;">
 </div>
 <div>Derek says "boom goes the dynamite"</div>
