--- a/website/templates/contact.html
+++ b/website/templates/contact.html
@@ -1,14 +1,13 @@
 <!-- your html code here -->
-<div class="container mt-5 bg-light">
+<div class="container mt-5 ">
     <div class=" p-3 rounded mb-4">
-        <h1 >Contact</h1>
+        <h1>Contact</h1>
     </div>
-    <div class="contact-info ">
-        <p>Until the ullamcorper there is no fear of the author fringilla. This is always the gateway to success. It is a great opportunity to pursue a career or a career. A good deal of protein, terrain and running.
+    <div class="p-3 rounded mb-4">
+        Until the ullamcorper there is no fear of the author fringilla. This is always the gateway to success. It is a great opportunity to pursue a career or a career. A good deal of protein, terrain and running.
     </div>
     <!--forms-->
 
-  
     <form class="form-horizontal col-9 mx-auto">
 
       <div class="row my-3">
@@ -32,10 +31,6 @@
       <div class="d-grid gap-2 d-md-flex justify-content-md-end">
             <button class="btn btn-primary" type="button">Button</button>
       </div>
-    </form>
-  
-
-    
-    
+    </form>   
 </div>
   
