--- a/website/assets/css/style.css
+++ b/website/assets/css/style.css
@@ -7,10 +7,25 @@ body{
     border:solid black;
     margin:20px;
   }
-  .tagline{
-    background-image: url("/website/assets/img/bg.jpg");
-    height:80vh;
-    background-size: cover;
-    background-repeat:no-repeat;
-    padding-top:-300px;
+.tagline{
+  background-image: url("/website/assets/img/bg.jpg");
+  height:700px;
+  background-size: cover;
+  background-repeat:no-repeat;
+  padding-top:-300px;
+}
+.banner1{
+  position:relative;
+  top:75px;
+  font-size:125px;
+  text-align:center;
+  font-weight: 600;
+  height:180px
+}
+.banner2{
+  position:relative;
+  top:110px;
+  font-size:80px;
+  text-align:center;
+  font-weight:600;
 }
