--- a/website/templates/tagline.html
+++ b/website/templates/tagline.html
@@ -6,8 +6,8 @@
     <div class="row">
         <!-- <img src="/website/assets/img/bg.jpg"> -->
         <!-- <img src="/website/assets/img/bg.jpg" class="bg-image" style="width:100%; height:80vh;"> -->
-        <div class="col-12 fs-1 fw-bold">One Page Wonder</div>
-        <div class="col-12 fs-1 fw-bold">Will Knock Your Socks Off</div>
+        <div class="banner1 col-12 bg-white">One Page Wonder</div>
+        <div class="banner2 col-12 bg-white">Will Knock Your Socks Off</div>
     </div>
 </div>
 
