--- a/website/templates/services.html
+++ b/website/templates/services.html
@@ -1,9 +1,19 @@
 <!-- your html code here -->
-<div class="container my-5">
+<style>
+    .custom-img {
+      width: 300px; 
+      height: 300px;
+    }
+</style>
+
+
+
+
+<div class="container mt-5">
     <div class="row align-items-center">
-        <div class="col-md-4 text center">
-            <img style= "max-height: 60%" src="https://fastly.picsum.photos/id/1/5000/3333.jpg?hmac=Asv2DU3rA_5D1xSe22xZK47WEAN0wjWeFOhzd13ujW4" class="img-fluid rounded-circle" alt="Hands typing on a keyboard">
-        </div>
+        <div class="col-4 d-flex align-items-center" >
+            <img style="max-width: 60%;" src= "https://fastly.picsum.photos/id/1/5000/3333.jpg?hmac=Asv2DU3rA_5D1xSe22xZK47WEAN0wjWeFOhzd13ujW4" class="rounded-circle shadow-4strong custom-img " alt=""/>
+          </div>
         <div class="col-md-8">
             <h2><strong>The Second Heading</strong> <span style="color: grey;">Is Pretty Cool Too.</span></h2>
             <p>
